fixed word wrap issue in item card

--- a/styles/ItemCard.module.css
+++ b/styles/ItemCard.module.css
@@ -14,6 +14,7 @@
 }
 
 .container:hover .title{
+    white-space: normal;
     transform: translateY(-200px);
 }
 
@@ -54,6 +55,9 @@
     font-weight: normal;
     font-size: 1rem;
     transition: all .3s ease-in-out;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
 }
 
 .text {
